# robo_movel

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
controle_robo/: package.xml  setup.cfg  setup.py
controle_robo/config/: missao_bandeira_azul.yaml
controle_robo/controle_robo/: controle_robo.py  detector_bandeira.py  launch_config.py  maquina_estados.py  modelos_missao.py
controle_robo/launch/: controle_missao.launch.py  missao_bandeira_azul.launch.py
description/: robot.urdf.xacro
docs/: apresentacao_trabalho1.md
launch/: carrega_robo.launch.py  editar_mundo.launch.py  inicia_simulacao.launch.py  teste_urdf.launch.py
robo_movel/: controle_robo.py  package.xml  setup.py
robo_movel/config/: controller_config.yaml
robo_movel/description/: robot.urdf.xacro
robo_movel/launch/: carrega_robo.launch.py  editar_mundo.launch.py  inicia_simulacao.launch.py
robo_movel/robo_movel/: robo_mapper.py
robo_movel/world/: arena.sdf  arena_cilindros.sdf.xacro  arena_classic.sdf  arena_paredes.sdf  arena_paredes.sdf.xacro  empty_arena.sdf  empty_arena.world
world/: arena_cilindros.sdf  empty.sdf  empty_arena.sdf.xacro
